Cambio de rama, para dejar a master como final

--- a/RemeControl/FormMain.resx
+++ b/RemeControl/FormMain.resx
@@ -123,4 +123,29 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>45</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAHYAAAB2AAAAAAAAAAAA
+        AAD///8A////AP///wD///8A////AP///wD///8A////AAAAAAcAAAB5AAAAiQAAAIgAAACIAAAAbwAA
+        AAP///8A////AP///wD///8A////AAAAAAQAAAAf////AAAAAAgAAACfAAAAXQAAAK4AAACVAAAArAAA
+        AFoAAACeAAAAA////wD///8A////AAAAAAQAAABMAAAAyAAAACcAAAB6AAAAXwAAAJAAAACLAAAAuwAA
+        ADUAAACTAAAAWgAAAG////8A////AAAAAFUAAACEAAAARwAAALcAAAAYAAAAiAAAALQAAAAPAAAAngAA
+        ADAAAACGAAAAGQAAAKwAAACI////AAAAAAcAAACB////AP///wAAAAAPAAAABQAAAIMAAACV////AAAA
+        AJAAAACIAAAAwQAAAAEAAACVAAAAiP///wAAAABUAAAAM////wD///8A////AP///wAAAACJAAAAtQAA
+        AAsAAACXAAAAIAAAAIQAAAAXAAAArgAAAIn///8AAAAAYQAAAB7///8AAAAABf///wD///8AAAAAggAA
+        AGMAAACGAAAAlwAAAMsAAAA4AAAAigAAAFsAAAB3////AAAAAAgAAAB6AAAAiAAAAIMAAACJAAAAggAA
+        ABcAAACcAAAAYwAAALUAAACVAAAAtAAAAFsAAACaAAAABQAAAAcAAACfAAAAXwAAALQAAACVAAAAtQAA
+        AF0AAACcAAAAFwAAAIIAAACJAAAAgwAAAIgAAAB5AAAAB////wAAAAB5AAAAXQAAAIsAAAAXAAAApQAA
+        ABoAAAB+AAAAXQAAAIL///8A////AAAAAAX///8AAAAAHgAAAGH///8AAAAAiQAAAK4AAAAOAAAAegAA
+        AEwAAACpAAAABwAAALUAAACJ////AP///wD///8A////AAAAADMAAABU////AAAAAIgAAACV////AAAA
+        AEsAAACZAAAARf///wAAAACVAAAAgwAAAAUAAAAQ////AP///wAAAACBAAAAB////wAAAACIAAAArAAA
+        ABEAAACcAAAAWwAAAIkAAAAJAAAAtAAAAIgAAABCAAAApgAAAD8AAACEAAAAVf///wD///8AAAAAbwAA
+        AFoAAACTAAAAGAAAAJUAAAAZAAAAiwAAAF8AAAB6AAAAWgAAALYAAABIAAAABP///wD///8A////AAAA
+        AAMAAACeAAAAWgAAAKwAAACVAAAArgAAAF0AAACfAAAACP///wAAAAAk////AP///wD///8A////AP//
+        /wD///8AAAAAAwAAAG8AAACIAAAAiAAAAIkAAAB5AAAAB////wD///8A////AP///wD///8A////AP//
+        /wD///8A/wEAAPIAAADgAAAAwAAAAJhAAACeAAAAlgAAAIAAAAAAAQAAAGkAAAB5AAAiGQAAAAMAAAAH
+        AAAAXwAAgP8AAA==
+</value>
+  </data>
 </root>
